Each assembly now gets it's own YSLS file when generating them.
This is twofold, first it prevents assembly csharp just clobbering any other asmdefs generated files (which is what was previously happening), and lets us start moving towards a model where the YSLS is the source of truth and not whatever random csharp files we just happen to find in the VSCode project.
Also renamed the asmdefs for the testing folder so that they match the existing filter code inside the actions generator.

--- a/Tests/Editor/YarnSpinnerEditorTests.asmdef
+++ b/Tests/Editor/YarnSpinnerEditorTests.asmdef
@@ -1,12 +1,12 @@
 {
-    "name": "YarnSpinner.Editor.Tests",
+    "name": "YarnSpinner.Unity.Tests.Editor",
     "rootNamespace": "",
     "references": [
         "YarnSpinner.Unity",
         "YarnSpinner.Unity.Editor",
         "UnityEngine.TestRunner",
         "UnityEditor.TestRunner",
-        "YarnSpinnerTests.Shared",
+        "YarnSpinner.Unity.Tests.Shared",
         "Unity.Localization",
         "Unity.Localization.Editor",
         "Unity.Localization.Settings",
